nuevo usuario ingresado

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
       </div>
     </div>
 
+    <div class="row marketing">
+      <div class="col-lg-6">
+        <h4>Carlos Yanez</h4>
+        <p>
+         Funcionario Senescyt
+        </p>
+      </div>
+    </div>
+
     <footer class="footer">
       <p>2015</p>
     </footer>
